creacion primera pregunta

--- a/index.html
+++ b/index.html
@@ -8,7 +8,15 @@
 </head>
 
 <body>
-    <div id="upperBar">
+    <h1> Laboratoria Trivia</h1>
+    <p>Responde, aprende y diviertete</p>
+    <div>
+        <span id="pregunta-1"> ¿Es laboratoria una ONG? </span>
+        <button onclick="correcta">"Si"</button>
+        <button onclick="incorrecta">"no"</button>
+    </div>
+    
+   <!-- <div id="upperBar">
         <span id="nameLabel">Nombre : </span>
         <span id="name"></span>
     </div>
@@ -28,8 +36,8 @@
     </div>
     <div id="warningBlock">
         <p id="warningMessage"></p>
-    </div>
-    <script src="app.js"></script>
+    </div>-->
+    <script src="app.js"></script> 
 </body>
 
 </html>
