primera pregunta con interfas de boton y respues

--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
         <p1>"¿Laboratoria capacita solo a mujeres?"</p1> 
         <button id= "question-1" onclick="myFunction()"> Si</button>
         <button id= "question-1" onclick="myFunction()"> NO</button>
+
+        <script src="apps.js"></script>
     </div>
     <div>
         <span id="pregunta-1"> ¿Es laboratoria una ONG? </span>
